@startuml

title __THIRDEXAMPLE's Class Diagram__\n

  namespace com.twdt.netty {
    namespace thirdexample {
      class com.twdt.netty.thirdexample.MyChatClient {
          {static} + main()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace thirdexample {
      class com.twdt.netty.thirdexample.MyChatClientHandler {
          # channelRead0()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace thirdexample {
      class com.twdt.netty.thirdexample.MyChatClientInitializer {
          # initChannel()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace thirdexample {
      class com.twdt.netty.thirdexample.MyChatServer {
          {static} + main()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace thirdexample {
      class com.twdt.netty.thirdexample.MyChatServerHandler {
          {static} - channelGroup : ChannelGroup
          + channelActive()
          + channelInactive()
          + exceptionCaught()
          + handlerAdded()
          + handlerRemoved()
          # channelRead0()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace thirdexample {
      class com.twdt.netty.thirdexample.MyChatServerInitializer {
          # initChannel()
      }
    }
  }
  

  com.twdt.netty.thirdexample.MyChatClientHandler -up-|> io.netty.channel.SimpleChannelInboundHandler
  com.twdt.netty.thirdexample.MyChatClientInitializer -up-|> io.netty.channel.ChannelInitializer
  com.twdt.netty.thirdexample.MyChatServerHandler -up-|> io.netty.channel.SimpleChannelInboundHandler
  com.twdt.netty.thirdexample.MyChatServerInitializer -up-|> io.netty.channel.ChannelInitializer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
